<resources>
    <string name="app_name">Tocatapp</string>
    <string name="ta_musicianRegistration">Musician Registration</string>
    <string name="ta_stepOne">Step 1</string>
    <string name="ta_stepTwo">Step 2</string>
    <string name="ta_stepThree">Step 3</string>
    <string name="ta_personalInfo">Personal information</string>
    <string name="ta_selectYourInstruments">Select the instruments that you can play</string>
    <string name="ta_selectYourMusicStyles">Select the music styles that you can play</string>
    <string name="ta_name">Name</string>
    <string name="ta_lastname">Last Name</string>
    <string name="ta_email">Email</string>
    <string name="ta_age">Age</string>
    <string name="ta_cancel">Cancel</string>
    <string name="ta_next">Next</string>
    <string name="ta_back">Back</string>
    <string name="ta_finish">Finish</string>
    <string name="ta_createAccount">Create account</string>
    <string name="ta_congratulations">Congratulations!</string>
    <string name="ta_welcomeToTheNetwork">Welcome to the Tocatapp Network!</string>
    <string name="ta_years">Years</string>
    <string name="ta_instrument_guitar">Guitar</string>
    <string name="ta_instrument_bass">Bass</string>
    <string name="ta_instrument_drums">Drums</string>
    <string name="ta_instrument_keyboards">Keyboards</string>
    <string name="ta_instrument_saxophone">Saxophone</string>
    <string name="ta_instrument_vocals">Vocals</string>
    <string name="ta_music_styles_rock">Rock</string>
    <string name="ta_music_styles_pop">Pop</string>
    <string name="ta_music_styles_funk">Funk</string>
    <string name="ta_music_styles_alternative">Alternative</string>
    <string name="ta_music_styles_reggae">Reggae</string>
    <string name="ta_music_styles_punk">punk</string>
    <string name="ta_password">Password</string>
    <string name="ta_bad_field">Bad field</string>
    <string name="ta_invalid_fname">Invalid firstname</string>
    <string name="ta_invalid_lastname">Invalid lastname</string>
    <string name="ta_invalid_email">Invalid email</string>
    <string name="ta_invalid_pass">The password must be an alphanumeric string between 4 and 10 characters long</string>
    <string name="ta_about">About us</string>
    <string name="ta_about_text">©2016, Tocatapp</string>
    <string name="ta_ok">Ok</string>
    <string name="ta_close_app">Exit application</string>
    <string name="ta_view_musicians">View musicians</string>
    <string name="ta_view_profile">View profile</string>
    <string name="ta_musicians_list">Musicians list</string>
    <string name="ta_find_musicians">Find musicians</string>
    <string name="ta_nowYouCanFind">Now you can find your next band member</string>
    <string name="ta_musicianProfile">Musician\'s profile</string>
    <string name="ta_audition">Audition musician</string>
    <string name="ta_instrument_s">Instrument(s): %s</string>
    <string name="ta_style_s">Style(s): %s</string>
    <string name="ta_playerError">Error initializing YouTube player %s</string>
    <string name="ta_actionSettings">Settings</string>
    <string name="ta_videos">Videos</string>
    <string name="ta_auditionRequest">An audition request message has been sent to the musician</string>
</resources>