<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tocatapp.tocatapp.MusicianRegistrationTwo"
    android:background="@drawable/bg_registration">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:weightSum="1"
        android:baselineAligned="false">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="96dp"
            android:id="@+id/imageView3"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_musicianRegistration"
            android:id="@+id/textView"
            style="@style/ta_bigTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_stepTwo"
            android:id="@+id/textView3"
            style="@style/ta_mediumTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_selectYourInstruments"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView2" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_guitar"
                    android:id="@+id/checkBox"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_bass"
                    android:id="@+id/checkBox2"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_vocals"
                    android:id="@+id/checkBox3"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_drums"
                    android:id="@+id/checkBox4"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_drums"
                    android:id="@+id/checkBox5"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_drums"
                    android:id="@+id/checkBox6"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_drums"
                    android:id="@+id/checkBox7"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_drums"
                    android:id="@+id/checkBox8"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ta_instrument_drums"
                    android:id="@+id/checkBox9"
                    style="@style/ta_checkboxView"
                    android:checked="false" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/ta_formViewVerticalGap">

                    <Button
                        android:id="@+id/action_bar_button_cancel"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:text="@string/ta_back"
                        android:theme="@style/ta_buttonBack"
                        android:layout_weight="1"
                        android:onClick="goBack"/>

                    <Button
                        android:id="@+id/action_bar_button_ok"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/ta_next"
                        android:theme="@style/ta_buttonSuccess"
                        android:onClick="goToStepThree"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</RelativeLayout>
