<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.Congratulations"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="@dimen/ta_logoWidth"
            android:layout_height="@dimen/ta_logoHeight"
            android:id="@+id/imageView5"
            android:src="@drawable/logo2"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_congratulations"
            android:id="@+id/textView6"
            style="@style/ta_congratulationsHeader"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_welcomeToTheNetwork"
            android:id="@+id/textView7"
            style="@style/ta_congratulationsMessage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_nowYouCanFind"
            android:id="@+id/textView8"
            style="@style/ta_congratulationsMessage"/>

        <include layout="@layout/btn_list_musicians"/>

    </LinearLayout>

</RelativeLayout>
